Changed a bit the diagram and connected it in the tex file.

--- a/paper/dipy_paper.tex
+++ b/paper/dipy_paper.tex
@@ -393,6 +393,13 @@ TODO: Need a diagram with the base (numpy, nibabel) and the rest of the modules 
 
 Dipy contains the following modules
 
+\begin{figure}
+\includegraphics[scale=0.45]{Figures/module_structure2.eps}
+\centering{}
+\caption{Diagram showing the major Dipy modules and dependencies.\label{Fig:module_structure}}
+\end{figure}
+
+
 \tiny
 \begin{verbatim}
 | modules       | main usage                | sub-modules                        |
