Added white background in the Qball type of methods figure

--- a/paper/dipy_paper.tex
+++ b/paper/dipy_paper.tex
@@ -368,7 +368,7 @@ TODO: Need a diagram with the base (numpy, nibabel) and the rest of the modules 
 Dipy contains the following modules
 
 \begin{figure}
-\includegraphics[scale=0.45]{Figures/module_structure2.eps}
+\includegraphics[scale=0.42]{Figures/module_structure2.eps}
 \centering{}
 \caption{Diagram showing the major Dipy modules and dependencies.\label{Fig:module_structure}}
 \end{figure}
@@ -935,7 +935,7 @@ odf = sh_to_sf(odf_sh, sphere, sh_order=8)
 \end{python}
 
 \begin{figure*}
-\centerline{\includegraphics[width=180mm]{Figures/ten_csa_csd.eps}}
+\centerline{\includegraphics[width=180mm]{Figures/ten_csa_csd2.eps}}
 \caption{This is the figure caption - and a label to refer to it in the text \label{Fig:ten_csa_csd}}
 \end{figure*}
 
