corrected problem with line breaking in introduction

--- a/paper/dipy_paper.tex
+++ b/paper/dipy_paper.tex
@@ -165,9 +165,8 @@ Visualization.
 
 \section{Introduction}
 
-\emph{Diffusion MRI} (dMRI) \citep{stejskal-tanner:65,
-  lebihan-breton:85,merboldt-hanicke-etal:85, taylor-bushell:85, callaghan:91}
-is an MRI technique that provides information about the structure of neuronal
+\emph{Diffusion MRI} (dMRI) \citep{stejskal-tanner:65, merboldt-hanicke-etal:85, lebihan-breton:85, taylor-bushell:85}
+is an MRI technique \citep{callaghan:91} that provides information about the structure of neuronal
 pathways found in the white matter and other body tissue with fiber-like
 structure. DMRI acquires one or more $T_{2}$ reference images, and a collection
 of diffusion-weighted images, in which $T_{2}$ signal is attenuated according
