--- a/paper/dipy_paper.tex
+++ b/paper/dipy_paper.tex
@@ -281,7 +281,7 @@ together summarized in what is referred to as the "b-value".  As described
 above, the measurement is conducted in several different directions and these
 are encoded in so-called "b-vectors". These are unit vectors that describe the
 direction relative to the scanner coordinate frame in which the gradients are
-applied. Different algorithms are used to determine the placement of these b
+applied. Different algorithms are used to determine the placement of these b-
 vectors (e.g. \citep{jones-etal:99}).
 
 While we are ultimately interested in the identification of the trajectories of
@@ -314,8 +314,8 @@ Tractography is the computational process through which the fibers are detected
 and delineated. Tractography relies on the assumption that diffusion of water,
 as reflected in the dMRI measurement, occurs more freely along the axis of an
 axon, than across the membranes of the axon. Tractography is therefore usually
-done by by finding the directions of diffusion in each voxel (see
-'Reconstruction', below) and stepping through the brain volume along the
+done by finding the directions of diffusion in each voxel (see
+\ref{reconstruction}) and stepping through the brain volume along the
 directions of large diffusion estimated in each location. This process
 generates so-called streamlines, which imaginary lines that approximate the
 underlying fiber. Streamlines are also sometimes referred to as "tracks". These
@@ -323,18 +323,18 @@ are not to be confused with tracts: While a tract is a physical object, a track
 is a computational construct that only approximates the underlying fascicle or
 bundle of fibers. Confusingly enough "streamline bundles", or simply "bundles"
 are often used to refer to a group of streamlines with similar shape and
-spatial characteristics. These do not necessarily correspond to individual
-physical fiber bundles but are instead also computational constructs that
-approximate the underlying anatomy.
+spatial characteristics (see \ref{quickbundles}). These do not necessarily 
+correspond to individual physical fiber bundles but are instead computational 
+constructs that approximate the underlying anatomy.
 
 \section{General design aspects}
 
-Dipy is built on the SciPy tool stack, which includes packages such as
-numpy (numerical arrays and array computation), scipy
+Dipy is built on the Scipy tool stack, which includes packages such as
+Numpy (numerical arrays and array computation), Scipy
 (scientific libraries, e.g. optimization, triangulation, special functions,
 and more) and Cython (an optimized Python to C compiler, used to achieve
-native performance).  Furthermore, it integrates into the NiPy (neuroimaging
-in Python) eco-system of software.
+native performance).  Furthermore, it integrates into the Nipy (neuroimaging
+in Python) eco-system of software (see Fig.~\ref{Fig:module_structure}).
 
 Dipy's API is designed with the aim to be intuitive, simple to use, and well
 documented.  This allows researchers to rapidly construct even complex
@@ -343,9 +343,9 @@ since the code is entirely free and open, Dipy is ideally suited to facilitate
 reproducible research.
 
 Like many modern open source projects, Dipy is hosted on GitHub---an online
-version of the Git revision control system.  Changes are made via a Pull
+version of the Git revision control system. Changes are made via a Pull
 Request (PR) mechanism, whereby submissions can be proposed, discussed and
-iterated upon before being included finally.  The discussions also allow for
+iterated upon before being included finally. The discussions also allow for
 line-by-line comments to be made by any interested developer.
 
 To assist developers, Dipy uses the Travis continuous integration system.  Any
@@ -362,31 +362,35 @@ converts it to either HTML, LaTeX or PDF formats.  API documentation is
 extracted directly from the docstrings in the source code, so that it is never
 outdated.
 
-TODO: Need a diagram with the base (numpy, nibabel) and the rest of the modules on top.
-
-Dipy contains the following modules
+Dipy's main sub-modules (see Fig.~\ref{Fig:module_structure}) are \emph{core}, 
+\emph{reconst, tracking, viz, io, align, data, sims} and \emph{segment}. 
+\emph{Core} contains general functions that can be used in any other sub-module. 
+\emph{Reconst} contains classes for voxel-based reconstruction. \emph{Tracking} 
+holds classes for fiber tracking and streamline processing. \emph{Viz} is used
+ for 3D vizualization and interaction. \emph{Io} offers input/output utilities
+when they are not available in Nibabel. \emph{Align} provides tools for 
+alignment and reslicing of volumes or streamlines. \emph{Sims} is focused on 
+creating synthetic simulations. \emph{Data} is used for downloading public 
+datasets. \emph{Segment} concentrates on segmentation of images and clustering
+of streamlines.
 
 \begin{figure}
 \includegraphics[scale=0.42]{Figures/module_structure2.eps}
 \centering{}
-\caption{Diagram showing the major Dipy modules and dependencies.\label{Fig:module_structure}}
+\caption{Dipy is one of the main projects of the Nipy community and depends strongly
+on Numpy, Scipy and Cython. This diagram further shows the major Dipy sub-modules.\label{Fig:module_structure}}
 \end{figure}
 
-
+In this paper we will use code listings to illustrate the use of Dipy. For 
+example, the following code snippet shows how to find your current version of 
+Dipy.
 \begin{python}
 import dipy
 dipy.__version__
 '0.7.0.dev'
 \end{python}
 
-In Dipy we consider as reconstruction phase as the one that starts after
-preprocessing and specific models are fitted in each voxel. Other voxel-based
-parameters can be calculated as well. The reconstruction phase is necessary for
-tracking because it provides the local direction information. During tracking
-these information will be propagated from voxel to voxel.
-
-
-\section{Preprocessing}
+\section{Preprocessing}\label{preprocessing}
 
 \subsection{Load/Save data}\label{loadsave}
 The most basic operation that we do in Neuroimaging is to load some data from
@@ -394,7 +398,7 @@ the disk which are generated from an MRI scanner. Surprisingly this is often a
 difficult task as different scanners and software read/write the data in
 different ways. Nibabel, a library for reading medical imaging formats, is
 coming here to the rescue supporting ANALYZE (plain, SPM99, SPM2), GIFTI,
-NIfTI1, MINC, MGH, ECAT, PAR/REC, Freesurfer(geometry, morphometry files) and
+NIfTI1, MINC, MGH, ECAT, PAR/REC, Freesurfer (geometry, morphometry files) and
 with a growing support for DICOM.
 
 The most common file format used in dMRI is the NIfTI1. Assuming that we have a
@@ -407,7 +411,7 @@ img = nib.load(fimg)
 Where \texttt{fimg} holds the filename for the 4D NIfTI1 file, \texttt{nib} is
 a shortcut for the Nibabel module, \texttt{img} is an object that Nibabel
 creates which contains all the information from the file e.g. the header, the
-data and the affine. We can obtain all these using \texttt{get} methods:
+data and the affine. We can obtain all these using \texttt{getter} methods:
 \begin{python}
 data = img.get_data()
 affine = img.get_affine()
@@ -423,11 +427,11 @@ variable \texttt{affine} provides a $4\times4$ matrix which contains the
 transformation matrix which maps voxel image coordinates to world mm
 coordinates. This matrix can be useful when registering, saving or visualizing
 images. The \texttt{voxel\_size} is a tuple with 3 values. In this example the
-\texttt{voxel\_size} is (2, 2, 2) i.e. $2mm^3$.
+\texttt{voxel\_size} is (2, 2, 2) i.e. $2~mm^3$.
 
 Supposing that we want to extract and save from the 4D data only the first volume which usually is the one without any diffusion gradients. This volume is also known as the \texttt{S0}. We can do that very easily using the following code.
 \begin{python}
-S0 = data[:,:,:,0]
+S0 = data[:, :, :, 0]
 img2 = nib.Nifti1Image(S0, affine)
 nib.save(img2, "S0.nii.gz")
 \end{python}
@@ -437,7 +441,7 @@ known as slicing. For example, \texttt{data[10:20, 10:20, 10:20, 30:50]}
 returns a new sub-array with \texttt{shape} (10, 10, 10, 20). When a single
 column (:) is used that means that all points in this dimension are used. The
 only delicate point here is that in order to save this new array we will need
-to update the affine. Here is how we can do this:
+to update the affine. This is possible in the following way:
 \begin{python}
 import numpy as np
 sub_data = data[10:20, 10:20, 10:20, 30:50]
@@ -449,20 +453,17 @@ nib.save(sub_img, "sub_data.nii.gz")
 
 \subsection{Background removal}
 In order to remove the background and keep only the parts that are in the brain
-we can use a function called \texttt{medotsu}.
+we can use a function called \texttt{median\_otsu}.
 \begin{python}
 from dipy.segment.mask import medotsu
 mask, S0_mask = medotsu(data[:, :, :, 0])
 \end{python}
-\texttt{medotsu} uses first a median filter to smooth the \texttt{S0} and then
-otsu, an automated histogram method [REFERENCE] to separate the brain
+\texttt{median\_otsu} uses first a median filter to smooth the \texttt{S0} and 
+then otsu, an automated histogram method [REF] to separate the brain
 (foreground) from its background. It returns two arrays, the \texttt{mask}, a
 3D array with 1s at the foreground and 0s in the background and the masked
-\texttt{S0} \texttt{S0\_mask} a 3D array whith the actual \texttt{S0} values in
+\texttt{S0}, \texttt{S0\_mask} a 3D array whith the actual \texttt{S0} values in
 the foreground and 0s in the background.
-
-Alternatively, FSL's brain extraction tool (bet) is accessible through our
-external module with \texttt{dipy.external.fsl.bet}.
 
 \subsection{Gradient Table}\label{gtab}
 The b-value $b$ or \emph{diffusion weighting} is a function of the amplitude,
@@ -493,7 +494,7 @@ gtab = gradient_table(bvals, bvecs)
 Here, \texttt{gtab} is an instance of a \texttt{GradientTable} object. This
 object makes sure that the b-values and b-vectors will come out in a form that
 Dipy knows how to use. For example, the \texttt{shape} of
-\texttt{gtab.bvals}and \texttt{gtabl.bvecs} should always return $N$ and
+\texttt{gtab.bvals} and \texttt{gtabl.bvecs} should always return $N$ and
 $N\times3$ respectively, where N is equal to the size of the last dimension of
 \texttt{data}. Often, it is useful to know the number and position of b-values
 with value 0 (b0s), an utility method is provided for this purpose with
@@ -504,7 +505,7 @@ b-vectors but also other acquisition parameters like TR, TE, $\delta$ and
 $\Delta$. Therefore, it is an abstract representation of the acquisition
 specific parameters.
 
-\section{Reconstruction}
+\section{Reconstruction}\label{reconstruction}
 
 In diffusion MRI, the motion of water molecules is probed in a spatial- and
 direction-specific manner. That is, in every spatial location in the brain
@@ -512,7 +513,7 @@ direction-specific manner. That is, in every spatial location in the brain
 $2\times2\times2$ mm), the diffusion in several different directions is probed
 through the application of directional magnetic gradients. This motion takes
 place at a microscopic level, therefore, if we want to describe how the
-molecules diffuse we have to study this phenomenon with from a statistical
+molecules diffuse we have to study this phenomenon from a statistical
 point of view. When a molecule is at position $\mathbf{x}_{0}$, we cannot read
 exactly where it will be after time $t$, we can only model a distribution of
 possible locations i.e. a probability displacement distribution. This is also
@@ -531,7 +532,7 @@ diffusion gradient $\mathbf{g}$, $\mathbf{r}$ is the relative spin displacement
 $\mathbf{x}-\mathbf{x}_{0}$ at diffusion time $t$ and $\mathbf{q}$ is the spin
 displacement wave vector. $\mathbf{q}$ is parallel with the applied magnetic
 gradient $\mathbf{g}$ which in turn are directly related with the b-vectors
-discussed in section \ref{loadsave}.  In theory, if we apply the Fourier
+discussed in section \ref{gtab}.  In theory, if we apply the Fourier
 transform in eq.~\ref{eq:fourier} we can get back a 3D PDF (the diffusion
 propagator) for every voxel. In practice, unfeasibly long acquisition time is
 required and perfect experimental conditions. Therefore, a discrete method
@@ -576,20 +577,20 @@ properties of the underlying tissue. The diffusivity along the primary
 direction (referred to as axial diffusivity, or AD) and along other directions
 (radial diffusivity, or RD), as well as the mean diffusivity (MD) are thought
 to index proportions of extra-cellular and intra-cellular water within the
-voxel. For xample, MD is commonly used in the diagnosis of acute ischemic
+voxel. For example, MD is commonly used in the diagnosis of acute ischemic
 stroke, because these types of brain injury are characterized by cell-body
 swelling. The reduction in extracellular water fraction results in a decrease
 in MD in the affected regions \citep{Maas2005}.
 
 The fractional anistropy (FA) is a normalized measure of the variation in
 diffusivity between different directions and was originally thought to index
-the organization of the tissue within the voxel \cite{Basser1996}. Later
+the organization of the tissue within the voxel \citep{Basser1996}. Later
 studies in animal models demonstrated that FA decreases when demyelination
-occurs \cite{Song2002}, because of increases in radial diffusivity. These
+occurs \citep{Song2002}, because of increases in radial diffusivity. These
 studies showed that in the white matter degree of myelination is an important
 factor in limiting diffusion of water across cellular compartments. In
 addition, tissue density affects both the radial and the axial diffusivity, and
-loss of nerve fiber tissue also results in a decrease in FA \cite{Beaulieu1996,
+loss of nerve fiber tissue also results in a decrease in FA \citep{Beaulieu1996,
   Beaulieu2002}. As a consequence of these studies, researchers now routinely
 refer to FA as a measure of "tissue integrity". However, we strongly warn
 against this usage, because it is easy to show that though the density of the
@@ -613,7 +614,7 @@ straightforward. In the following example, we show how the tensor model is fit
 to data and how univariate measures can be computed.
 
 First, \texttt{data}, \texttt{mask} and \texttt{gtab} are created as we saw in
-section \ref{loadsave}. Next, we can import the diffusion tensor model class
+section \ref{preprocessing}. Next, we can import the diffusion tensor model class
 and initialize a \texttt{TensorModel} class instance with the name
 \texttt{ten\_model}:
 \begin{python}
@@ -639,19 +640,19 @@ univariate measures, such as the fractional anisotropy (FA) [REF]:
 from dipy.reconst.dti import fractional_anisotropy
 fa = fractional_anisotropy(ten_fit.evals)
 \end{python}
-It is common to represent the primary diffusion direction using an RGB representation and create a DEC map[REF]:
+It is common to represent the primary diffusion direction using an RGB representation and create a DEC map[REF] (see Fig.~\ref{Fig:ten_csa_csd}):
 \begin{python}
 from dipy.reconst.dti import color_fa
 cfa = color_fa(fa, tenfit.evecs)
 \end{python}
-Finally, a few more points about the implementation of DTI. The first is that
+Finally, a couple more points about the implementation of DTI. The first is that
 there is still ongoing research on fitting methods for the tensor model
 \citep{Koay2006}. Several different methods have been implemented, including
 non-linear least-squares, ordinary least-squares and weighted least-squares
 fitting \citep{chung-lu-etal:06}. In addition, there is ongoing research on
 methods to robustly fit the tensor model, in the face of noisy data
-\citep{Chang2005, Chang2012}. An implementation of a robust tensor fitting
-algorithm (RESTORE) will be in version 0.7 of the software.
+\citep{Chang2005, Chang2012}. For this purpose, an implementation of a robust 
+tensor fitting algorithm (RESTORE) is also available.
 
 The second is that many more univariate measures have been implemented. Not
 only can users compute FA, MD, DEC, but also other statistics that have been
@@ -714,6 +715,11 @@ from dipy.reconst.dsi import
 dsid_model = DiffusionSpectrumDeconvModel(gtab)
 dsid_fit = dsid_model.fit(data)
 \end{python}
+
+In Fig.~\ref{Fig:pdf} we show noiseless volumetric renderings of the PDFs of 
+a simulation of a $60\,^{\circ}$ crossing with the two different methods. It 
+is evident that the LR deconvolution modules represents better the underlying structure.
+
 Since we are mainly interested in the angular structure of the underlying
 tissue, we further simplify the data by taking the weighted radial summation of
 $P(\mathbf{r})$
@@ -794,7 +800,7 @@ qb_nodf = minmax_normalize(qb_odf)
 \end{python}
 Important points here are that SH order needs to be $6$ and the regularization
 parameter $0.006$. Furthermore, because the analytical ODF method produces more
-rounded ODFs it is useful for visualization purposes to us min-max
+rounded ODFs it is useful for visualization purposes to use min-max
 normalization. The SH coefficients are accessible using the attribute
 \texttt{qb\_fit.shm\_coeff}. Methods (b) and (c) can be used in a very similar
 way. For example, for the Constant Solid Angle (CSA)
@@ -833,14 +839,14 @@ deconvolution operation can be performed by simple matrix inversion. However,
 the spherical deconvolution problem is ill-posed and thus susceptible to noise.
 
 Constrained super-resolved spherical deconvolution (CSD)
-\citep{tournier-calamante-etal:07} give a robust solution to this problem by
+\citep{tournier-calamante-etal:07} gives a robust solution to this problem by
 applying two major constraints on the fitting of the fODF. The first is that it
 applies a non-negativity constraint: fODF values that are smaller than 0 are
 non-physical and are precluded. The other is that CSD applies a sparseness
 constraint on the fODF - it assumes that only a few of the fODF values will be
-larger than 0. Applying these two constraints allows fitting the SH basis set
-up to very high orders - in essence fitting more parameters than data is
-present. This is known as \emph{super-resolution}. This super-resolved method
+larger than 0. Applying these two constraints allows fitting the SH basis
+up to very high orders - in essence fitting more parameters than data allow. 
+This is known as \emph{super-resolution}. This super-resolved method
 can be accessed in Dipy using:
 \begin{python}
 from dipy.reconst.csdeconv import
@@ -875,7 +881,7 @@ spherical harmonics.
 \begin{equation}
 \psi_{SDT}(\mathbf{u})=\displaystyle\sum_{j=1}^{R}2\pi P_{l_{j}}(0) \frac{c_j}{f_j}Y_{j}(\mathbf{u})\label{eq:ODF_SDT}
 \end{equation}
-For the derivation and explanation of the formula see \citep{descoteaux-deriche-etal:09}.
+For the derivation and explanation of the formula see \cite{descoteaux-deriche-etal:09}.
 \begin{python}
 from dipy.reconst.csdeconv import
         ConstrainedSDTModel as SdtModel
@@ -884,6 +890,14 @@ sdt_model = SdtModel(gtab, ratio)
 Here the response function is provided as a scalar parameter, the ratio of the
 smallest eigenvalue over the largest eigenvalue. Both spherical deconvolution
 methods perform similarly \citep{GaryfallidisISBI2013a}.
+
+In Fig.~\ref{Fig:ten_csa_csd} the ODFs of the \texttt{TensorModel}, \texttt{CsaOdfModel} and \texttt{CsdModel} in of a region in the centrum semiovale crossed by the splenium of the corpus callosum are shown. 
+
+\begin{figure*}
+\centerline{\includegraphics[width=180mm]{Figures/ten_csa_csd2.eps}}
+\caption{a) Tensor ellipsoids color-coded with a DEC map, b) Tensor ODFs, c) Constant solid angle ODFs and d)super-resolved constrained spherical deconvolution ODFs\label{Fig:ten_csa_csd}}
+\end{figure*}
+
 
 \subsection{Peaks from models}
 In the previous sections we showed that the reconstruction models have a
@@ -895,7 +909,7 @@ ODFs, b) find the directions of the maxima in the ODFs which can be useful for
 tracking, c) discretize those directions on the unit sphere for efficiency, d)
 compress the ODFs as spherical harmonics to reduce memory usage and e)
 calculate many metrics simultaneously, e.g. generalized fractional anisotropy
-(GFA), without the need of creating all ODFs at
+(GFA)[REF], without the need of creating all ODFs at
 once. \texttt{peaks\_from\_model} can be called as:
 \begin{python}
 from dipy.reconst.odf import peaks_from_model
@@ -933,17 +947,11 @@ from dipy.reconst.shm import sh_to_sf
 odf = sh_to_sf(odf_sh, sphere, sh_order=8)
 \end{python}
 
-\begin{figure*}
-\centerline{\includegraphics[width=180mm]{Figures/ten_csa_csd2.eps}}
-\caption{This is the figure caption - and a label to refer to it in the text \label{Fig:ten_csa_csd}}
-\end{figure*}
-
-
-\section{Fiber tracking}
+\section{Fiber tracking}\label{fiber_tracking}
 \subsection{Deterministic}
 
 \subsubsection{EuDX}
-Euler Delta Crossings (EuDX)~\citep{Garyfallidis_thesis} is the first tracking
+Euler Delta Crossings~\citep{Garyfallidis_thesis} is the first tracking
 method that was implemented in Dipy. We created an algorithm that has many
 similarities with the classical deterministic methods~\citep{Mori1999,
   conturo-lori-etal:99, basser-pajevic-etal:00} and with more recent ones as
@@ -997,20 +1005,23 @@ advantage that it allows us to seed from specific ROIs or from the gray matter
 results \citep{Cote2013tractometer}. The instance of EuDX returns back an
 iterator. In every call of the iterator a new streamline is returned. This
 technique allows to save directly streamlines in the disk without loading all
-streamlines in memory.
+streamlines in memory. In Fig.~\ref{Fig:pretty_streamlines} we show a human 
+brain streamlines, approximating the brain's white matter connections, generated 
+from EuDX. 
 
 \begin{figure}
 \includegraphics[scale=0.75]{Figures/pretty_streamlines.eps}
 \centering{}
-\caption{EuDX \label{Fig:pretty_streamlines}}
+\caption{An example of EuDX-based fiber tracking applied on a real human brain dataset\label{Fig:pretty_streamlines}}
 \end{figure}
 
 \subsection{Probabilistic}
 
-\section{Post-tracking}
-In this sections we describe some of the tools available for processing
+\section{Post-tracking}\label{post_tracking}
+
+In the following sections we describe some of the tools available for processing
 streamlines after these have been created.
-\subsection{Streamline clustering}
+\subsection{Streamline clustering}\label{quickbundles}
 Depending on the initial number of seeds and other tracking parameters
 fiber tracking algorithms can generate a great number of densely packed
 streamlines (often more than one million) which is difficult to interact
@@ -1049,7 +1060,7 @@ tcs, tes = track_counts(streamlines,
 Given a set of streamlines and the shape of the 3D volume that the streamlines
 were created we find whether a point of a streamline passed through a voxel by
 rounding the mm point values to voxels. For a streamline that passes through a
-voxel more than once, we only record counts and elements for the first point in
+voxel more than once, we only increase the count for the first point in
 the streamline that enters the voxel. This information is returned in array
 \texttt{tcs} of the same shape as \texttt{volume\_shape}. The entry
 \texttt{tcs[i, j, k]} is the number of tracks that passed through voxel at voxel
@@ -1066,7 +1077,7 @@ calculate track densities [REF] or used for connectivity analysis.
 In Dipy we have implemented a plurality of metrics for streamlines. For example,
 perhaps the simplest thing that someone may want to do is to calculate the
 average length and standard deviation of the streamlines generated after the
-fiber tracking procedure. This can happen very easily using the \texttt{lenght}
+fiber tracking procedure. This can happen very easily using the \texttt{length}
 function which takes as input a single streamline. We can then iterate through
 all the streamlines in the following way:
 \begin{python}
@@ -1079,18 +1090,19 @@ standard_deviation_lengths = lengths.std()
 \end{python}
 Many other metrics can be found in the metrics sub-module e.g. \texttt{spline} for
 spline interpolation, \texttt{centre\_of\_mass}, \texttt{mean\_curvature},
-\texttt{mean\_orientation} and the \texttt{frenet\_serret} framework for curvature
+\texttt{mean\_orientation} and the \texttt{frenet serret} framework for curvature
 and torsion calculations along a streamline.
 
 \subsection{Visualization}
-All figures created in this paper are generated by our own visualization tools
-which can be used for most parts of the diffusion analysis pipeline. We have
-developed a minimal, lightweight and up to the point module which is based
-on the Visualization Toolkit (VTK)[REF] and we call \texttt{fvtk}. The main
-idea is that window can have one or more renderers. A renderer can have none,
-one or more actors. Examples of actors are a sphere, line, point or a complete
-set of streamlines. You basically add actors in a renderer and in that way you
-can visualize the forementioned objects e.g. sphere, line etc. The windows can
+Fig.~\ref{Fig:pdf},~\ref{Fig:ten_csa_csd},~\ref{Fig:pretty_streamlines} are generated by 
+our own visualization tools which can be used for most parts of the diffusion 
+analysis pipeline. We have developed a minimal, lightweight and up to the point 
+module which is based on the Visualization Toolkit (VTK)[REF] and we call 
+\texttt{fvtk}. The main idea is that window can have one or more renderers. 
+A renderer can have none, one or more actors. Examples of actors are a sphere, 
+line, point or a complete set of streamlines. You can basically add actors in a 
+renderer and in that way you can visualize the forementioned objects e.g. 
+sphere, line etc. The windows can
 be created by either the \texttt{show} function which creates a visible window
 or the \texttt{record} function which creates a temporary window only for the
 purpose of using it to render the objects and save the frames on disk. The
@@ -1104,7 +1116,7 @@ line_actor = fvtk.pretty_line(streamlines,
 fvtk.add(renderer, line_actor)
 fvtk.show(renderer)
 \end{python}
-The most commonly used visualization functions are given in \ref{fvtk_table}.
+The most commonly used visualization functions are given in Tab.~\ref{fvtk_table}.
 
 \begin{table}[th] \processtable{List of visualization functions\label{fvtk_table}}
 {\begin{tabular}{rr} \hline
@@ -1130,15 +1142,17 @@ volume & 3D volume rendering with raycasting \\
 We have described the Dipy library for analysis of diffusion MRI data. Dipy is
 a part of the Neuroimaging in Python community (\url{nipy.org}), a growing
 community of scientists and developers who are participating in the development
-of open source software for neuroimaging written in the Python language. One
-major source of support for this community comes in the form of the Neurodebian
+of open source software for neuroimaging written in the Python language. 
+Extend...
+
+\section*{Acknowledgments}
+One major source of support for this community comes in the form of the Neurodebian
 distribution \citep{Halchenko2012}. Neurodebian is a platform for maintenance
 and deployment of software for the analysis of neuroscience data, based on free
 open source software (FOSS) practices.
 
-
-\section*{Acknowledgments}
 Ariel Rokem is funded by a National Research Service Award (NEI F32 EY022294).
+Eleftherios Garyfallidis if funded by ...
 
 \section*{Disclosure/Conflict-of-Interest Statement}
 There are no conflicts of interest.
